# ical_parser

./: .system_prompt  CALENDAR_INVITE_REMOVER_README.md  CALENDAR_PRIVACY_CHANGES.md  LICENSE  OUTLOOK_EVENT_MANAGER_README.md  README.md  README_Windows_Automation.md  calendar_cleaner_windows.bat  calendar_cleaner_windows.ps1  calendar_invite_remover.py  create_cancellation_events.py  drikCalReader.py  icalReaderSample.py  icalWriter.py  make_events_private.py  outlook_event_manager.bat  outlook_event_manager.ps1  outlook_event_manager.py  pyproject.toml  remove_calendar_invites.bat  remove_calendar_invites.ps1  run_vedic_calendar.py  setup.py  test_random_names.py  test_run_events.json  vedic_events.ics  vedic_events.json
CalendarOut/: example.ics
VedicCalendarParser/: .gitignore  April2025.ics  BlockingDVEvents.ics  Project_summary.MD  README.md  __init__.py  config.py  hora_calc.py  hora_events.ics  hora_response.json  icalParser6.py  icaltoJson.py  main.py  nakshatras.txt  prompt.txt  pyproject.toml  test_date_handling.py  test_hora_api.py  vedic_events.ics
VedicCalendarParser/input_ics_files/: August_2025.ics  December_2025.ics  July_2025.ics  July_output_2025.ics  November_2025.ics  October_2025.ics  September_2025.ics
VedicCalendarParser/input_ics_files/invites/: vedic_August__2025_events.ics  vedic_December__2025_events.ics  vedic_July__2025_events.ics  vedic_November__2025_events.ics  vedic_October__2025_events.ics  vedic_September__2025_events.ics
VedicCalendarParser/output_ics_files/: July_output_2025_cleaned_cleaned_cancellations.ics
(+32 files in other folders)
