[project]
name = "ical_parser"
version = "0.1.0"
description = "Vedic Calendar Parser"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "pytest>=8.3.5",
    "setuptools",
    "icalendar",
    "requests",
    "pytz",

]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
python = "3.11"

[tool.hatch.build.targets.wheel]
packages = ["icalParser6"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
addopts = "-v"
pythonpath = ["tests"]
