[project]
name = "copilot-version"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "duckdb>=1.2.0",
    "requests>=2.32.3",
    "beautifulsoup4>=4.13.3",
    "icalendar>=6.1.2",
    "pytz>=2025.2",
    "setuptools>=78.1.0",
    "pytest>=8.3.5",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/copilot_version"]
